Fixed Register Issue 1-File Upload 2-Error Handling

--- a/ChatAppServer/ChatAppServer.Frontend/Authentication.html
+++ b/ChatAppServer/ChatAppServer.Frontend/Authentication.html
@@ -153,9 +153,28 @@ body.login .lock-container .panel input {
 <div class="panel panel-default text-center">
 <img src="https://bootdey.com/img/Content/avatar/avatar1.png" class="img-circle img-login">
 <div class="panel-body">
-<input class="form-control" type="text" placeholder="Username" value>
+<input class="form-control" type="text" placeholder="Username" value="username">
 <input class="form-control" type="password" placeholder="Enter Password" value>
-<a href="#index.html" class="btn btn-success">Login <i class="fa fa-fw fa-unlock-alt"></i></a>
+<a href="#index.html" class="btn btn-success" id="login">Login <i class="fa fa-fw fa-unlock-alt"></i></a>
+<script>
+  // app.js
+document.getElementById('login').addEventListener('click', () => {
+  fetch('https://localhost:44335/Authentication/Login', {
+    method: 'GET',
+    headers: {
+        'Content-Type': 'application/json'
+    },
+    body: JSON.stringify({ key: 'username' }) // Göndermek istediğin veriyi buraya yaz
+})
+.then(response => response.json())
+.then(data => console.log(data))
+.catch(error => console.error('Hata:', error));
+
+});
+
+
+
+</script>
 <a href="#" class="forgot-password">Forgot password?</a>
 </div>
 </div>
