--- a/ChatAppServer/ChatAppServer.Frontend/Index.html
+++ b/ChatAppServer/ChatAppServer.Frontend/Index.html
@@ -230,7 +230,19 @@
 <div class="ms-user clearfix">
 <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt class="img-avatar pull-left">
 <div>Signed in as <br> 
-    <p>UserName</p>
+    
+    <p id="username">UserName</p>
+    <script>
+        const userData = localStorage.getItem('user'); // Get the user data
+        if (userData) {
+            const user = JSON.parse(userData); // Parse the JSON string
+            const name = user.name || "User not found"; // Access the name property
+            document.getElementById('username').textContent = name; // Assign name to paragraph
+        } else {
+            document.getElementById('username').textContent = "User not found"; // Fallback message
+        }
+    </script>
+    
     <!-- <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="3e5313565152525f495f477e59535f5752105d5153">[email&#160;protected]</a> -->
 </div>
 </div>
